<resources>
    <string name="app_name">PolicyApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_themeDark">Set App Theme Dark</string>
    <string name="action_themeLight">Set App Theme Light</string>
    <string name="title_activity_location">Map</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="outstanding_clients">Outstanding Clients</string>
    <string name="paid_clients">Paid Clients</string>
    <string name="all_clients">All Clients</string>
    <string name="about_us">About Us</string>
    <string name="add_dependent">Add dependent</string>
    <string name="done">Done</string>
    <string name="update">Update</string>
    <string name="dependent_first_name">Dependent First Name:</string>
    <string name="dependent_id_number">Dependent ID Number:</string>
    <string name="dependent_last_name">Dependent Last Name:</string>
    <string name="relationship">Relationship:</string>
    <string name="client_id_number">Client ID Number:</string>
    <string name="client_last_name">Client Last Name:</string>
    <string name="client_first_name">Client First Name:</string>
    <string name="sign_in">sign in</string>
    <string name="password">Password:</string>
    <string name="user_name">User Name:</string>
    <string name="client_physical_address">Client Physical Address:</string>
    <string name="address_line_1">Address Line 1:</string>
    <string name="address_line_2">Address Line 2:</string>
    <string name="address_line_3">Address Line 3:</string>
    <string name="area_code">Area Code:</string>
    <string name="cell_number">Cell Number:</string>
    <string name="register">register</string>
    <string name="cancel">Cancel</string>
    <string name="client_gender">client gender:</string>
    <string name="dependent_gender">Dependent gender:</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="amount_payable">Amount payable:</string>
    <string name="min_200">Min: 200</string>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
