<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.policy.ngobeni.policyapp.Dependent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dependent_first_name" />

    <EditText
        android:id="@+id/etRegDependent_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dependent_last_name" />

    <EditText
        android:id="@+id/etRegDependent_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dependent_id_number" />

    <EditText
        android:id="@+id/etRegDependent_id_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dependent_gender" />
    <Spinner
        android:id="@+id/dependent_gender_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/relationship" />

    <EditText
        android:id="@+id/etRegDependent_relationship"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textAutoComplete" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="16dp">

        <Button
            android:id="@+id/btnRegisterDependent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/add_dependent" />

        <Button
            android:id="@+id/btnDoneDependent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/done" />
    </LinearLayout>
</LinearLayout>